package ProductoAbst;

public enum Calidad {
    A, B, C
}
